# voicemeter_overlay

./: CMakeLists.txt  VoicemeeterRemote.h  main.cpp  mainwindow.cpp  mainwindow.h  vmr_client.c  vmr_client.h  voice.pro
